[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "workbuddy-acp-bridge"
version = "0.1.0"
description = "Expose WorkBuddy connector capabilities to Codex CLI through MCP and ACP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.0,<2",
]

[project.optional-dependencies]
test = ["pytest>=8,<10", "pytest-asyncio>=0.24,<2"]

[project.scripts]
workbuddy-acp-bridge = "workbuddy_acp_bridge.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workbuddy_acp_bridge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
